# huminity_control

./: .gitignore  README.md
humidity_android/slave/: slave.ino
humidity_arduino/: bh1750.cpp  bh1750.h  humidity_arduino.ino  humidity_arduino_M.hex  humidity_arduino_S.hex  msg.h  utils.cpp  utils.h
humidity_arduino/BlinkWithoutDelay/: BlinkWithoutDelay.ino
humidity_arduino/master/: master.ino  master.ino.hex
humidity_arduino/slave/: slave.ino  slave.ino.hex
humidity_arduino/test/24rx/: 24rx.ino
humidity_arduino/test/24tx/: 24tx.ino  NRF24L01.h
humidity_arduino/transfor128/: transfor128.ino
serial-humanity/: .gitignore  CMakeLists.txt  TutorialConfig.h.in  cserial.cpp  cserial.h  main.cpp
serial-humanity/Helper/: CMakeLists.txt  Log.h
